@@ -8,9 +8,9 @@ import dev.mcdevmcp.storage.model.MinecraftVersion;
 import dev.mcdevmcp.support.AppEnvironment;
 
 import java.io.IOException;
+import java.io.OutputStream;
 import java.net.InetSocketAddress;
-import java.nio.channels.AsynchronousSocketChannel;
-import java.nio.channels.CompletionHandler;
+import java.nio.channels.SocketChannel;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.time.Duration;
@@ -19,7 +19,14 @@ import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.BiFunction;
 import java.util.function.Function;
+import java.util.function.Supplier;
 
+/**
+ * JDK 26, --enable-preview.
+ * <p>
+ * CompletionStage is retained at the boundary; the implementation uses
+ * interruptible, sequential code inside structured task scopes.
+ */
 final class SessionControlSupport {
     static final int BRIDGE_PORT_START = 9876;
     static final int BRIDGE_PORT_END = 9886;
@@ -29,115 +36,576 @@ final class SessionControlSupport {
 
     private static final Duration POLL_INTERVAL = Duration.ofSeconds(1);
     private static final Duration PROCESS_POLL_INTERVAL = Duration.ofMillis(250);
+    private static final Duration CANCELLATION_POLL_INTERVAL = Duration.ofMillis(50);
     private static final Duration PID_PROBE_TIMEOUT = Duration.ofSeconds(4);
     private static final BridgeEndpoint SNAPSHOT = new BridgeEndpoint("snapshot");
     private static final BridgeEndpoint SCREEN_INSPECT = new BridgeEndpoint("screenInspect");
 
     private final BridgeSession session;
     private final AppEnvironment environment;
-    private final ScheduledExecutorService scheduler;
     private final MonotonicTicker ticker;
     private final PortListeningProbe portListeningProbe;
     private final ListeningPidResolver listeningPidResolver;
 
-    SessionControlSupport(BridgeSession session, AppEnvironment environment, ScheduledExecutorService scheduler) {
-        this(session, environment, scheduler, MonotonicTicker.system(), defaultPortListeningProbe(scheduler), defaultListeningPidResolver(scheduler));
+    SessionControlSupport(BridgeSession session, AppEnvironment environment) {
+        this(session, environment, MonotonicTicker.system(), defaultPortListeningProbe(), defaultListeningPidResolver());
     }
 
-    SessionControlSupport(BridgeSession session, AppEnvironment environment, ScheduledExecutorService scheduler, MonotonicTicker ticker, PortListeningProbe portListeningProbe, ListeningPidResolver listeningPidResolver) {
+    SessionControlSupport(BridgeSession session, AppEnvironment environment, MonotonicTicker ticker, PortListeningProbe portListeningProbe, ListeningPidResolver listeningPidResolver) {
         this.session = Objects.requireNonNull(session, "session");
         this.environment = Objects.requireNonNull(environment, "environment");
-        this.scheduler = Objects.requireNonNull(scheduler, "scheduler");
         this.ticker = Objects.requireNonNull(ticker, "ticker");
         this.portListeningProbe = Objects.requireNonNull(portListeningProbe, "portListeningProbe");
         this.listeningPidResolver = Objects.requireNonNull(listeningPidResolver, "listeningPidResolver");
     }
 
     static <T, R> CompletionStage<R> mapCancellable(CompletionStage<T> stage, Function<T, R> mapper) {
-        var result = new CancellableOperation<R>();
-        result.pending(stage);
-        stage.whenComplete((value, failure) -> {
-            if (result.isDone()) {
-                return;
-            }
-            if (failure != null) {
-                result.completeExceptionally(failure);
-                return;
-            }
-            try {
-                result.complete(mapper.apply(value));
-            } catch (RuntimeException exception) {
-                result.completeExceptionally(exception);
-            }
+        Objects.requireNonNull(stage, "stage");
+        Objects.requireNonNull(mapper, "mapper");
+        return async(stage, () -> {
+            T value = await(stage);
+            checkInterrupted();
+            return mapper.apply(value);
         });
-        return result;
     }
 
     static <T, R> CompletionStage<R> composeCancellable(CompletionStage<T> stage, Function<T, CompletionStage<R>> mapper) {
-        var result = new CancellableOperation<R>();
-        result.pending(stage);
-        stage.whenComplete((value, failure) -> {
-            if (result.isDone()) {
-                return;
-            }
-            if (failure != null) {
-                result.completeExceptionally(failure);
-                return;
-            }
-            CompletionStage<R> next;
-            try {
-                next = Objects.requireNonNull(mapper.apply(value), "Composed runtime operation returned no stage");
-            } catch (RuntimeException exception) {
-                result.completeExceptionally(exception);
-                return;
-            }
-            result.pending(next);
-            next.whenComplete((mapped, mappedFailure) -> {
-                if (result.isDone()) {
-                    return;
-                }
-                if (mappedFailure != null) {
-                    result.completeExceptionally(mappedFailure);
-                }
-                else {
-                    result.complete(mapped);
-                }
-            });
+        Objects.requireNonNull(stage, "stage");
+        Objects.requireNonNull(mapper, "mapper");
+        return async(stage, () -> {
+            T value = await(stage);
+            checkInterrupted();
+            return await(Objects.requireNonNull(mapper.apply(value), "Composed runtime operation returned no stage"));
         });
-        return result;
     }
 
     static <T, R> CompletionStage<R> handleCancellable(CompletionStage<T> stage, BiFunction<T, Throwable, R> handler) {
-        var result = new CancellableOperation<R>();
-        result.pending(stage);
-        stage.whenComplete((value, failure) -> {
-            if (result.isDone()) {
-                return;
-            }
+        Objects.requireNonNull(stage, "stage");
+        Objects.requireNonNull(handler, "handler");
+        return async(stage, () -> {
+            T value = null;
+            Throwable failure = null;
             try {
-                result.complete(handler.apply(value, failure));
-            } catch (RuntimeException exception) {
-                result.completeExceptionally(exception);
+                value = await(stage);
+            } catch (ExecutionException exception) {
+                failure = exception.getCause();
+            } catch (CancellationException exception) {
+                // Upstream cancellation is an input to the handler. Interruption
+                // of this operation is not, and propagates out of await().
+                failure = exception;
             }
+            checkInterrupted();
+            return handler.apply(value, failure);
         });
-        return result;
     }
 
     static CompletionStage<ContentToolResult<Void>> recoverTool(CompletionStage<ContentToolResult<Void>> stage) {
-        var result = new CancellableOperation<ContentToolResult<Void>>();
-        result.pending(stage);
-        stage.whenComplete((value, failure) -> {
-            if (result.isDone()) {
-                return;
+        return handleCancellable(stage, (value, failure) -> failure == null ? value : ToolResult.error(message(failure)));
+    }
+
+    CompletionStage<String> checkSessionControlEnabled() {
+        CompletionStage<SessionInfo> info = session.connectedPort().isPresent() ? CompletableFuture.completedFuture(session.sessionInfo().orElseThrow(() -> new IllegalStateException("DebugBridge connected without session information"))) : session.connect(null);
+        return mapCancellable(info, sessionInfo -> sessionInfo.sessionControlEnabled().filter(enabled -> !enabled).map(ignored -> sessionControlDisabledMessage(sessionInfo.gameDir().orElse(null))).orElse(null));
+    }
+
+    CompletionStage<InWorldWaitResult> waitUntilInWorld(Duration timeout, boolean requireAbsenceFirst, ToolCancellation cancellation) {
+        Objects.requireNonNull(cancellation, "cancellation");
+        long started = ticker.readNanos();
+        long budget = saturatedNanos(timeout);
+        return async(() -> inScope(remaining(started, budget), cancellation, () -> pollInWorld(started, budget, requireAbsenceFirst, cancellation), () -> inWorldResult(InWorldWaitResult.State.TIMEOUT, null, started)));
+    }
+
+    CompletionStage<FoundBridge> waitForBridge(ExpectedInstance expected, Duration timeout, List<String> notes, ToolCancellation cancellation) {
+        Objects.requireNonNull(expected, "expected");
+        Objects.requireNonNull(notes, "notes");
+        Objects.requireNonNull(cancellation, "cancellation");
+        long started = ticker.readNanos();
+        long budget = saturatedNanos(timeout);
+        var mismatches = new LinkedHashMap<Integer, String>();
+        Supplier<FoundBridge> timedOut = () -> {
+            throw new IllegalStateException(bridgeTimeoutMessage(expected, timeout, mismatches));
+        };
+        return async(() -> inScope(remaining(started, budget), cancellation, () -> pollBridge(expected, notes, mismatches, started, budget, cancellation, timedOut), timedOut));
+    }
+
+    CompletionStage<ClientExitResult> waitForClientExit(int port, Long pid, Duration timeout, ToolCancellation cancellation) {
+        Objects.requireNonNull(cancellation, "cancellation");
+        long started = ticker.readNanos();
+        long budget = saturatedNanos(timeout);
+        var phase = new AtomicReference<>(ClientExitResult.Phase.PORT);
+        return async(() -> inScope(remaining(started, budget), cancellation, () -> pollClientExit(port, pid, started, budget, cancellation, phase), () -> new ClientExitResult.Timeout(phase.get())));
+    }
+
+    CompletionStage<Long> resolveListeningPid(int port) {
+        return listeningPidResolver.resolve(port);
+    }
+
+    CompletionStage<BridgeResponse> send(BridgeEndpoint endpoint, BridgePayload payload, Duration timeout) {
+        return session.send(endpoint, payload, timeout);
+    }
+
+    Optional<SessionInfo> sessionInfo() {
+        return session.sessionInfo();
+    }
+
+    OptionalLong connectedPort() {
+        var port = session.connectedPort();
+        return port.isPresent() ? OptionalLong.of(port.orElseThrow()) : OptionalLong.empty();
+    }
+
+    CompletionStage<SessionInfo> adoptPort(int port) {
+        return session.adoptPort(port);
+    }
+
+    void disconnect() {
+        session.disconnect();
+    }
+
+    private InWorldWaitResult pollInWorld(long started, long budget, boolean requireAbsenceFirst, ToolCancellation cancellation) throws InterruptedException {
+        var progress = new InWorldWaitProgress();
+        while (true) {
+            checkCancelled(cancellation);
+            if (expired(started, budget)) {
+                return inWorldResult(InWorldWaitResult.State.TIMEOUT, null, started);
             }
-            if (failure == null) {
-                result.complete(value);
+            Object snapshot = queryResult(SNAPSHOT);
+            checkCancelled(cancellation);
+            var state = stepInWorldWait(progress, requireAbsenceFirst, snapshot, null);
+            if (state instanceof InWorldPollResult.Joined) {
+                return inWorldResult(InWorldWaitResult.State.JOINED, null, started);
             }
-            else {
-                result.complete(ToolResult.error(message(failure)));
+            if (expired(started, budget)) {
+                return inWorldResult(InWorldWaitResult.State.TIMEOUT, null, started);
             }
+            Object screen = queryResult(SCREEN_INSPECT);
+            checkCancelled(cancellation);
+            state = stepInWorldWait(progress, requireAbsenceFirst, snapshot, screen);
+            if (state instanceof InWorldPollResult.Failed(String reason)) {
+                return inWorldResult(InWorldWaitResult.State.FAILED, reason, started);
+            }
+            pause(POLL_INTERVAL, started, budget);
+        }
+    }
+
+    private Object queryResult(BridgeEndpoint endpoint) throws InterruptedException {
+        try {
+            BridgeResponse response = await(session.send(endpoint, RuntimeToolSupport.EMPTY_PAYLOAD, null));
+            return response.success() ? response.result() : null;
+        } catch (ExecutionException | CancellationException ignored) {
+            checkInterrupted();
+            return null;
+        }
+    }
+
+    private FoundBridge pollBridge(ExpectedInstance expected, List<String> notes, Map<Integer, String> mismatches, long started, long budget, ToolCancellation cancellation, Supplier<FoundBridge> timedOut) throws InterruptedException {
+        while (true) {
+            checkCancelled(cancellation);
+            if (expired(started, budget)) {
+                return timedOut.get();
+            }
+            // Deliberately sequential: do not change preferred-port ordering or
+            // assume that BridgeSession supports concurrent probes.
+            for (int port : bridgePortRange()) {
+                checkCancelled(cancellation);
+                if (expired(started, budget)) {
+                    return timedOut.get();
+                }
+                SessionInfo info;
+                try {
+                    info = await(session.probe(port));
+                } catch (ExecutionException | CancellationException ignored) {
+                    checkInterrupted();
+                    continue;
+                }
+                checkCancelled(cancellation);
+                if (instanceMatches(info, expected)) {
+                    return new FoundBridge(port, info);
+                }
+                String description = info.version().value() + " (" + info.gameDir().map(Path::toString).orElse("unknown gameDir") + ")";
+                if (!description.equals(mismatches.put(port, description))) {
+                    notes.add("port " + port + " answered with a different instance: " + description + " — skipping");
+                }
+            }
+            pause(POLL_INTERVAL, started, budget);
+        }
+    }
+
+    private ClientExitResult pollClientExit(int port, Long pid, long started, long budget, ToolCancellation cancellation, AtomicReference<ClientExitResult.Phase> phase) throws InterruptedException {
+        while (true) {
+            checkCancelled(cancellation);
+            if (expired(started, budget)) {
+                return new ClientExitResult.Timeout(ClientExitResult.Phase.PORT);
+            }
+            boolean listening;
+            try {
+                listening = Boolean.TRUE.equals(await(portListeningProbe.isListening(port)));
+            } catch (ExecutionException | CancellationException ignored) {
+                checkInterrupted();
+                listening = true; // A failed probe is not evidence that the port closed.
+            }
+            checkCancelled(cancellation);
+            if (!listening) {
+                break;
+            }
+            pause(POLL_INTERVAL, started, budget);
+        }
+        if (pid == null) {
+            return new ClientExitResult.Exited(false);
+        }
+        phase.set(ClientExitResult.Phase.PROCESS);
+        while (true) {
+            checkCancelled(cancellation);
+            if (expired(started, budget)) {
+                return new ClientExitResult.Timeout(ClientExitResult.Phase.PROCESS);
+            }
+            if (!processAlive(pid)) {
+                return new ClientExitResult.Exited(true);
+            }
+            pause(PROCESS_POLL_INTERVAL, started, budget);
+        }
+    }
+
+    private InWorldWaitResult inWorldResult(InWorldWaitResult.State state, String reason, long started) {
+        return new InWorldWaitResult(state, reason, elapsedSeconds(started, ticker.readNanos()));
+    }
+
+    private boolean expired(long started, long budget) {
+        return elapsedNanos(started, ticker.readNanos()) >= budget;
+    }
+
+    private Duration remaining(long started, long budget) {
+        long elapsed = Math.max(0, elapsedNanos(started, ticker.readNanos()));
+        return Duration.ofNanos(elapsed >= budget ? 0 : budget - elapsed);
+    }
+
+    private void pause(Duration interval, long started, long budget) throws InterruptedException {
+        Thread.sleep(Duration.ofNanos(Math.min(saturatedNanos(interval), remaining(started, budget).toNanos())));
+    }
+
+    private static String bridgeTimeoutMessage(ExpectedInstance expected, Duration timeout, Map<Integer, String> mismatches) {
+        String expectedDescription = expected.gameDirectory().map(Path::toString).orElseGet(() -> expected.version().map(MinecraftVersion::value).orElse("any instance"));
+        String seen = mismatches.isEmpty() ? "" : " Other instances answered: " + String.join(", ", mismatches.entrySet().stream().map(entry -> "port " + entry.getKey() + " → " + entry.getValue()).toList()) + ".";
+        double timeoutSeconds = timeout.getSeconds() + timeout.getNano() / 1_000_000_000.0;
+        return "Timed out after " + Math.round(timeoutSeconds) + "s waiting for the bridge of " + expectedDescription + " on ports " + BRIDGE_PORT_START + "-" + BRIDGE_PORT_END + "." + seen + " If you just launched the client, check the launcher window: it may be sitting" + " on a login prompt (the user must log in once in the launcher GUI), or the game may" + " have crashed — read <gameDir>/logs/latest.log.";
+    }
+
+    /**
+     * Race the operation against tool cancellation with a scope-owned timeout.
+     * A failure must win just like a success; anySuccessfulOrThrow would leave
+     * the cancellation watcher running after a failed operation.
+     */
+    @SuppressWarnings("preview")
+    private static <T> T inScope(Duration timeout, ToolCancellation cancellation, Callable<T> work, Supplier<T> timedOut) throws Exception {
+        checkCancelled(cancellation);
+        long nanos = saturatedNanos(timeout);
+        if (nanos == 0) {
+            return timedOut.get();
+        }
+        try (var scope = StructuredTaskScope.open(new FirstCompleted<T>(), config -> config.withName("session-control").withTimeout(Duration.ofNanos(nanos)))) {
+            scope.fork(work);
+            if (cancellation != null) {
+                scope.fork(() -> {
+                    while (!cancellation.isCancelled()) {
+                        Thread.sleep(CANCELLATION_POLL_INTERVAL);
+                    }
+                    throw new CancellationException("Tool operation cancelled");
+                });
+            }
+            return scope.join();
+        } catch (StructuredTaskScope.TimeoutException ignored) {
+            // close() has already joined the children; timeout reporting may
+            // safely inspect state such as the phase or accumulated mismatches.
+            return timedOut.get();
+        } catch (StructuredTaskScope.FailedException exception) {
+            Throwable failure = exception.getCause();
+            if (failure instanceof IOException) {
+                return null;
+            }
+            if (failure instanceof InterruptedException interrupted) {
+                throw interrupted;
+            }
+            if (failure instanceof RuntimeException runtime) {
+                throw runtime;
+            }
+            throw new IllegalStateException(failure);
+        }
+    }
+
+    @SuppressWarnings("preview")
+    private static final class FirstCompleted<T> implements StructuredTaskScope.Joiner<T, T> {
+        private record Outcome<T>(T value, Throwable failure) {
+        }
+
+        private final AtomicReference<Outcome<T>> first = new AtomicReference<>();
+
+        @Override
+        public boolean onComplete(StructuredTaskScope.Subtask<T> subtask) {
+            // Capture here: before join completes, JDK 26 permits accessing a
+            // subtask's result/exception only from its onComplete callback.
+            Outcome<T> outcome = switch (subtask.state()) {
+                case SUCCESS -> new Outcome<>(subtask.get(), null);
+                case FAILED -> new Outcome<>(null, subtask.exception());
+                case UNAVAILABLE -> throw new IllegalArgumentException("Subtask is unavailable");
+            };
+            return first.compareAndSet(null, outcome);
+        }
+
+        @Override
+        public T result() throws Throwable {
+            var outcome = Objects.requireNonNull(first.get(), "No subtask completed");
+            if (outcome.failure() != null) {
+                throw outcome.failure();
+            }
+            return outcome.value();
+        }
+    }
+
+    private static void checkCancelled(ToolCancellation cancellation) throws InterruptedException {
+        checkInterrupted();
+        if (cancellation != null && cancellation.isCancelled()) {
+            throw new CancellationException("Tool operation cancelled");
+        }
+    }
+
+    private static void checkInterrupted() throws InterruptedException {
+        if (Thread.currentThread().isInterrupted()) {
+            throw new InterruptedException("Session control interrupted");
+        }
+    }
+
+    /**
+     * Adapt existing async dependencies without blocking a platform thread.
+     * Cancellation of an arbitrary CompletionStage remains best-effort: its
+     * implementation must actually stop its work when its future is canceled.
+     */
+    private static <T> T await(CompletionStage<T> stage) throws InterruptedException, ExecutionException {
+        CompletableFuture<T> future = stage.toCompletableFuture();
+        try {
+            checkInterrupted();
+            return future.get();
+        } catch (InterruptedException exception) {
+            future.cancel(true);
+            throw exception;
+        } finally {
+            if (future.isCancelled() && future instanceof AsyncOperation<?> operation) {
+                // Our own adapters additionally guarantee that their resource
+                // cleanup has finished before an interrupted parent continues.
+                operation.awaitStopped();
+            }
+        }
+    }
+
+    private static <T> CompletionStage<T> async(Callable<T> work) {
+        return async(work, () -> {
         });
+    }
+
+    private static <T> CompletionStage<T> async(CompletionStage<?> dependency, Callable<T> work) {
+        Objects.requireNonNull(dependency, "dependency");
+        return async(work, () -> dependency.toCompletableFuture().cancel(true));
+    }
+
+    private static <T> CompletionStage<T> async(Callable<T> work, Runnable cancelDependency) {
+        var result = new AsyncOperation<T>(work, cancelDependency);
+        result.worker.start();
         return result;
+    }
+
+    static boolean ownerStopped(CompletionStage<?> stage) {
+        return stage instanceof AsyncOperation<?> operation && operation.stopped.getCount() == 0;
+    }
+
+    /**
+     * The only unstructured boundary, required by the existing CompletionStage API.
+     */
+    private static final class AsyncOperation<T> extends CompletableFuture<T> {
+        private final Thread worker;
+        private final Runnable cancelDependency;
+        private final CountDownLatch stopped = new CountDownLatch(1);
+
+        private AsyncOperation(Callable<T> work, Runnable cancelDependency) {
+            this.cancelDependency = Objects.requireNonNull(cancelDependency, "cancelDependency");
+            worker = Thread.ofVirtual().name("session-control-owner").unstarted(() -> {
+                try {
+                    T value;
+                    try {
+                        value = work.call();
+                    } finally {
+                        stopped.countDown();
+                    }
+                    super.complete(value);
+                } catch (InterruptedException exception) {
+                    Thread.currentThread().interrupt();
+                    super.cancel(false);
+                } catch (CancellationException exception) {
+                    // Cancellation is part of the CompletionStage contract, not
+                    // an exceptional result.  This also makes scope-owned
+                    // cancellation indistinguishable from caller cancellation.
+                    super.cancel(false);
+                } catch (Throwable failure) {
+                    super.completeExceptionally(unwrap(failure));
+                }
+            });
+            // Preserve cleanup when callers complete the future themselves,
+            // including through orTimeout()/completeOnTimeout(), not only cancel().
+            whenComplete((ignoredValue, ignoredFailure) -> {
+                if (Thread.currentThread() != worker) {
+                    worker.interrupt();
+                }
+            });
+        }
+
+        @Override
+        public boolean cancel(boolean mayInterruptIfRunning) {
+            boolean cancelled = super.cancel(mayInterruptIfRunning);
+            if (cancelled) {
+                // Preserve the old class's policy: cancelling the result also
+                // cancels its work, including when cancel(false) is requested.
+                cancelDependency.run();
+                worker.interrupt();
+            }
+            return cancelled;
+        }
+
+        private void awaitStopped() {
+            boolean interrupted = false;
+            while (true) {
+                try {
+                    // Wait for resource cleanup, not arbitrary callbacks that
+                    // might execute synchronously when the result is published.
+                    stopped.await();
+                    break;
+                } catch (InterruptedException ignored) {
+                    interrupted = true;
+                }
+            }
+            if (interrupted || Thread.currentThread().isInterrupted()) {
+                Thread.currentThread().interrupt();
+            }
+        }
+    }
+
+    @SuppressWarnings("preview")
+    private static Throwable unwrap(Throwable failure) {
+        Throwable current = failure;
+        while ((current instanceof CompletionException || current instanceof ExecutionException || current instanceof StructuredTaskScope.FailedException) && current.getCause() != null) {
+            current = current.getCause();
+        }
+        return current;
+    }
+
+    private static String message(Throwable failure) {
+        Throwable cause = unwrap(failure);
+        return cause.getMessage() == null ? cause.toString() : cause.getMessage();
+    }
+
+    private static PortListeningProbe defaultPortListeningProbe() {
+        return port -> async(() -> inScope(Duration.ofMillis(800), null, () -> {
+            checkInterrupted();
+            // SocketChannel.connect is interruptible on virtual threads and the
+            // scope retains the old 800ms per-port bound.
+            try (var socket = SocketChannel.open()) {
+                socket.configureBlocking(true);
+                socket.connect(new InetSocketAddress("127.0.0.1", port));
+                checkInterrupted();
+                return true;
+            } catch (IOException ignored) {
+                checkInterrupted();
+                return false;
+            }
+        }, () -> false));
+    }
+
+    private static ListeningPidResolver defaultListeningPidResolver() {
+        return listeningPidResolver(command -> new ProcessBuilder(command).redirectError(ProcessBuilder.Redirect.DISCARD).start());
+    }
+
+    static ListeningPidResolver listeningPidResolver(ProcessStarter processStarter) {
+        Objects.requireNonNull(processStarter, "processStarter");
+        return port -> {
+            List<String> command = listeningPidCommand(port);
+            return async(() -> inScope(PID_PROBE_TIMEOUT, null, () -> {
+                checkInterrupted();
+                Process process;
+                try {
+                    process = processStarter.start(command);
+                } catch (IOException exception) {
+                    return null;
+                }
+                boolean interrupted = false;
+                try {
+                    checkInterrupted();
+                    return readListeningPid(process);
+                } catch (InterruptedException failure) {
+                    interrupted = true;
+                    destroyQuietly(process);
+                    Thread.interrupted();
+                    throw failure;
+                } catch (RuntimeException failure) {
+                    destroyQuietly(process);
+                    throw failure;
+                } finally {
+                    closeProcess(process);
+                    if (interrupted) {
+                        Thread.currentThread().interrupt();
+                    }
+                }
+            }, () -> null));
+        };
+    }
+
+    private static void destroyQuietly(Process process) {
+        try {
+            if (process.isAlive()) {
+                process.destroyForcibly();
+            }
+        } catch (RuntimeException ignored) {
+            // Cleanup is best effort; the owner still closes the process.
+        }
+    }
+
+    private static void closeProcess(Process process) {
+        try {
+            process.close();
+        } catch (IOException | RuntimeException ignored) {
+            // The owning scope has already destroyed the process on failure.
+        }
+    }
+
+    @SuppressWarnings("preview")
+    private static Long readListeningPid(Process process) throws InterruptedException {
+        try (var scope = StructuredTaskScope.open()) {
+            try {
+                // Drain output while waiting: waiting for exit before reading
+                // stdout can deadlock when the subprocess fills its pipe.
+                var output = scope.fork(() -> new String(process.getInputStream().readAllBytes(), StandardCharsets.UTF_8));
+                scope.fork(() -> process.getErrorStream().transferTo(OutputStream.nullOutputStream()));
+                var exit = scope.fork(() -> process.waitFor());
+                scope.join();
+                return exit.get() == 0 ? parseListeningPid(output.get()) : null;
+            } finally {
+                // Destroy before scope close joins stream readers.
+                if (process.isAlive()) {
+                    process.destroyForcibly();
+                }
+            }
+        } catch (StructuredTaskScope.FailedException exception) {
+            Throwable failure = exception.getCause();
+            if (failure instanceof IOException) {
+                return null;
+            }
+            if (failure instanceof InterruptedException interrupted) {
+                throw interrupted;
+            }
+            if (failure instanceof RuntimeException runtime) {
+                throw runtime;
+            }
+            throw new IllegalStateException(failure);
+        }
+    }
+
+    private static List<String> listeningPidCommand(int port) {
+        return System.getProperty("os.name").toLowerCase(Locale.ROOT).contains("win") ? List.of("powershell.exe", "-NoProfile", "-Command", "(Get-NetTCPConnection -LocalPort " + port + " -State Listen -ErrorAction SilentlyContinue).OwningProcess") : List.of("lsof", "-t", "-iTCP:" + port, "-sTCP:LISTEN");
     }
 
     static InWorldPollResult classifyInWorldPoll(Object snapshotResult, Object screenResult) {
@@ -246,144 +714,6 @@ final class SessionControlSupport {
         }
     }
 
-    private static String message(Throwable failure) {
-        Throwable current = failure;
-        while ((current instanceof java.util.concurrent.CompletionException || current instanceof java.util.concurrent.ExecutionException) && current.getCause() != null) {
-            current = current.getCause();
-        }
-        return current.getMessage() == null ? current.toString() : current.getMessage();
-    }
-
-    @SuppressWarnings("resource")
-    private static PortListeningProbe defaultPortListeningProbe(ScheduledExecutorService scheduler) {
-        return port -> {
-            var result = new CompletableFuture<Boolean>();
-            AsynchronousSocketChannel channel;
-            try {
-                channel = AsynchronousSocketChannel.open();
-            } catch (IOException exception) {
-                return CompletableFuture.completedFuture(false);
-            }
-            ScheduledFuture<?> timeout = scheduler.schedule(() -> {
-                closeQuietly(channel);
-                result.complete(false);
-            }, saturatedNanos(Duration.ofMillis(800)), TimeUnit.NANOSECONDS);
-            result.whenComplete((_, _) -> {
-                timeout.cancel(false);
-                closeQuietly(channel);
-            });
-            channel.connect(new InetSocketAddress("127.0.0.1", port), null, new CompletionHandler<>() {
-                @Override
-                public void completed(Void ignored, Object attachment) {
-                    result.complete(true);
-                }
-
-                @Override
-                public void failed(Throwable ignored, Object attachment) {
-                    result.complete(false);
-                }
-            });
-            return result;
-        };
-    }
-
-    private static ListeningPidResolver defaultListeningPidResolver(ScheduledExecutorService scheduler) {
-        return listeningPidResolver(scheduler, command -> new ProcessBuilder(command).redirectError(ProcessBuilder.Redirect.DISCARD).start());
-    }
-
-    static ListeningPidResolver listeningPidResolver(ScheduledExecutorService scheduler, ProcessStarter processStarter) {
-        Objects.requireNonNull(scheduler, "scheduler");
-        Objects.requireNonNull(processStarter, "processStarter");
-        return port -> {
-            List<String> command = System.getProperty("os.name").toLowerCase(Locale.ROOT).contains("win") ? List.of("powershell.exe", "-NoProfile", "-Command", "(Get-NetTCPConnection -LocalPort " + port + " -State Listen -ErrorAction SilentlyContinue).OwningProcess") : List.of("lsof", "-t", "-iTCP:" + port, "-sTCP:LISTEN");
-            var result = new CompletableFuture<Long>();
-            Process process;
-            try {
-                process = processStarter.start(command);
-            } catch (IOException ioException) {
-                return CompletableFuture.completedFuture(null);
-            }
-            AtomicReference<CleanupState> cleanup = new AtomicReference<>(CleanupState.OPEN);
-            Object lifecycleLock = new Object();
-            AtomicReference<ScheduledFuture<?>> timeoutRef = new AtomicReference<>();
-            Runnable close = () -> {
-                try {
-                    process.close();
-                } catch (IOException | RuntimeException ignored) {
-                }
-            };
-            Runnable closeAfterAbort = () -> {
-                if (cleanup.compareAndSet(CleanupState.ABORTED, CleanupState.CLOSING)) {
-                    Thread.ofVirtual().start(close);
-                }
-            };
-            Runnable abort = () -> {
-                synchronized (lifecycleLock) {
-                    if (!cleanup.compareAndSet(CleanupState.OPEN, CleanupState.ABORTED)) {
-                        return;
-                    }
-                    try {
-                        process.destroyForcibly();
-                    } catch (RuntimeException ignored) {
-                    } finally {
-                        result.complete(null);
-                    }
-                }
-                closeAfterAbort.run();
-            };
-            try {
-                result.whenComplete((_, _) -> {
-                    ScheduledFuture<?> timeout = timeoutRef.get();
-                    if (timeout != null) {
-                        timeout.cancel(false);
-                    }
-                    if (result.isCancelled()) {
-                        abort.run();
-                    }
-                });
-                process.onExit().whenComplete((exited, failure) -> {
-                    synchronized (lifecycleLock) {
-                        try {
-                            if (cleanup.get() != CleanupState.OPEN || result.isDone()) {
-                                return;
-                            }
-                            if (failure != null || exited.exitValue() != 0) {
-                                result.complete(null);
-                            }
-                            else {
-                                try {
-                                    result.complete(parseListeningPid(new String(exited.getInputStream().readAllBytes(), StandardCharsets.UTF_8)));
-                                } catch (IOException ioException) {
-                                    result.complete(null);
-                                }
-                            }
-                        } finally {
-                            if (cleanup.compareAndSet(CleanupState.OPEN, CleanupState.CLOSING)) {
-                                close.run();
-                            }
-                        }
-                    }
-                });
-                ScheduledFuture<?> timeout = scheduler.schedule(abort, saturatedNanos(PID_PROBE_TIMEOUT), TimeUnit.NANOSECONDS);
-                timeoutRef.set(timeout);
-                if (result.isDone()) {
-                    timeout.cancel(false);
-                }
-            } catch (RuntimeException exception) {
-                abort.run();
-                return result;
-            }
-            return result;
-        };
-    }
-
-    private static void closeQuietly(AsynchronousSocketChannel channel) {
-        try {
-            channel.close();
-        } catch (IOException ignored) {
-        }
-    }
-
     static boolean processAlive(long pid) {
         try {
             return ProcessHandle.of(pid).map(ProcessHandle::isAlive).orElse(false);
@@ -405,112 +735,6 @@ final class SessionControlSupport {
         return List.copyOf(ports);
     }
 
-    CompletionStage<String> checkSessionControlEnabled() {
-        CompletionStage<SessionInfo> info;
-        if (session.connectedPort().isPresent()) {
-            info = CompletableFuture.completedFuture(session.sessionInfo().orElseThrow(() -> new IllegalStateException("DebugBridge connected without session information")));
-        }
-        else {
-            info = session.connect(null);
-        }
-        return info.thenApply(sessionInfo -> sessionInfo.sessionControlEnabled().filter(enabled -> !enabled).map(_ -> sessionControlDisabledMessage(sessionInfo.gameDir().orElse(null))).orElse(null));
-    }
-
-    CompletionStage<InWorldWaitResult> waitUntilInWorld(Duration timeout, boolean requireAbsenceFirst, ToolCancellation cancellation) {
-        long started = ticker.readNanos();
-        var operation = new CancellableOperation<InWorldWaitResult>();
-        var poller = new InWorldPoller(operation, cancellation, started, timeout, requireAbsenceFirst);
-        operation.deadline(() -> operation.complete(new InWorldWaitResult(InWorldWaitResult.State.TIMEOUT, null, elapsedSeconds(started, ticker.readNanos()))), timeout, scheduler);
-        poller.tick();
-        return operation;
-    }
-
-    CompletionStage<FoundBridge> waitForBridge(ExpectedInstance expected, Duration timeout, List<String> notes, ToolCancellation cancellation) {
-        long started = ticker.readNanos();
-        var operation = new CancellableOperation<FoundBridge>();
-        var waiter = new BridgeWaiter(operation, cancellation, expected, notes, started, timeout);
-        operation.deadline(waiter::timeout, timeout, scheduler);
-        waiter.sweep();
-        return operation;
-    }
-
-    CompletionStage<Long> resolveListeningPid(int port) {
-        return listeningPidResolver.resolve(port);
-    }
-
-    CompletionStage<BridgeResponse> send(BridgeEndpoint endpoint, BridgePayload payload, Duration timeout) {
-        return session.send(endpoint, payload, timeout);
-    }
-
-    Optional<SessionInfo> sessionInfo() {
-        return session.sessionInfo();
-    }
-
-    OptionalLong connectedPort() {
-        return session.connectedPort().isPresent() ? OptionalLong.of(session.connectedPort().orElseThrow()) : OptionalLong.empty();
-    }
-
-    CompletionStage<SessionInfo> adoptPort(int port) {
-        return session.adoptPort(port);
-    }
-
-    void disconnect() {
-        session.disconnect();
-    }
-
-    CompletionStage<ClientExitResult> waitForClientExit(int port, Long pid, Duration timeout, ToolCancellation cancellation) {
-        long started = ticker.readNanos();
-        var operation = new CancellableOperation<ClientExitResult>();
-        var phase = new AtomicReference<>(ClientExitResult.Phase.PORT);
-        operation.deadline(() -> operation.complete(new ClientExitResult.Timeout(phase.get())), timeout, scheduler);
-        pollPortClosed(operation, cancellation, port, pid, started, timeout, phase);
-        return operation;
-    }
-
-    private void pollPortClosed(CancellableOperation<ClientExitResult> operation, ToolCancellation cancellation, int port, Long pid, long started, Duration timeout, AtomicReference<ClientExitResult.Phase> phase) {
-        if (operation.stopIfCancelled(cancellation)) {
-            return;
-        }
-        CompletionStage<Boolean> listening = portListeningProbe.isListening(port);
-        operation.pending(listening);
-        listening.whenComplete((isListening, failure) -> {
-            if (operation.isDone()) {
-                return;
-            }
-            boolean stillListening = failure != null || Boolean.TRUE.equals(isListening);
-            if (!stillListening) {
-                if (pid == null) {
-                    operation.complete(new ClientExitResult.Exited(false));
-                }
-                else {
-                    phase.set(ClientExitResult.Phase.PROCESS);
-                    pollProcessExit(operation, cancellation, pid, started, timeout);
-                }
-                return;
-            }
-            if (elapsedNanos(started, ticker.readNanos()) >= saturatedNanos(timeout)) {
-                operation.complete(new ClientExitResult.Timeout(ClientExitResult.Phase.PORT));
-                return;
-            }
-            operation.schedule(() -> pollPortClosed(operation, cancellation, port, pid, started, timeout, phase), POLL_INTERVAL, scheduler);
-        });
-    }
-
-    private void pollProcessExit(CancellableOperation<ClientExitResult> operation, ToolCancellation cancellation, long pid, long started, Duration timeout) {
-        if (operation.stopIfCancelled(cancellation)) {
-            return;
-        }
-        if (!processAlive(pid)) {
-            operation.complete(new ClientExitResult.Exited(true));
-            return;
-        }
-        if (elapsedNanos(started, ticker.readNanos()) >= saturatedNanos(timeout)) {
-            operation.complete(new ClientExitResult.Timeout(ClientExitResult.Phase.PROCESS));
-            return;
-        }
-        operation.schedule(() -> pollProcessExit(operation, cancellation, pid, started, timeout), PROCESS_POLL_INTERVAL, scheduler);
-    }
-
     @FunctionalInterface
     interface PortListeningProbe {
         CompletionStage<Boolean> isListening(int port);
@@ -526,238 +750,8 @@ final class SessionControlSupport {
         Process start(List<String> command) throws IOException;
     }
 
-    private enum CleanupState {
-        OPEN, ABORTED, CLOSING
-    }
-
-    record ExpectedInstance(Optional<MinecraftVersion> version, Optional<Path> gameDirectory) {
-        ExpectedInstance {
-            Objects.requireNonNull(version, "version");
-            Objects.requireNonNull(gameDirectory, "gameDirectory");
-        }
-
-        static ExpectedInstance none() {
-            return new ExpectedInstance(Optional.empty(), Optional.empty());
-        }
-    }
-
-    record FoundBridge(int port, SessionInfo info) {
-    }
-
     static final class InWorldWaitProgress {
         private boolean sawAbsence;
     }
 
-    private static final class CancellableOperation<T> extends CompletableFuture<T> {
-        private final AtomicReference<Future<?>> pending = new AtomicReference<>();
-        private final AtomicReference<ScheduledFuture<?>> scheduled = new AtomicReference<>();
-        private final AtomicReference<ScheduledFuture<?>> deadline = new AtomicReference<>();
-
-        private CancellableOperation() {
-            whenComplete((_, _) -> cancelWork());
-        }
-
-        private void pending(CompletionStage<?> stage) {
-            CompletableFuture<?> future = stage.toCompletableFuture();
-            pending.set(future);
-            if (isDone()) {
-                future.cancel(true);
-            }
-            future.whenComplete((_, _) -> pending.compareAndSet(future, null));
-        }
-
-        private void schedule(Runnable action, Duration delay, ScheduledExecutorService scheduler) {
-            if (isDone()) {
-                return;
-            }
-            ScheduledFuture<?> future = scheduler.schedule(action, saturatedNanos(delay), TimeUnit.NANOSECONDS);
-            ScheduledFuture<?> previous = scheduled.getAndSet(future);
-            if (previous != null) {
-                previous.cancel(false);
-            }
-            if (isDone()) {
-                future.cancel(false);
-            }
-        }
-
-        private void deadline(Runnable action, Duration delay, ScheduledExecutorService scheduler) {
-            if (isDone()) {
-                return;
-            }
-            ScheduledFuture<?> future = scheduler.schedule(action, saturatedNanos(delay), TimeUnit.NANOSECONDS);
-            ScheduledFuture<?> previous = deadline.getAndSet(future);
-            if (previous != null) {
-                previous.cancel(false);
-            }
-            if (isDone()) {
-                future.cancel(false);
-            }
-        }
-
-        private boolean stopIfCancelled(ToolCancellation cancellation) {
-            if (isDone()) {
-                return true;
-            }
-            if (cancellation.isCancelled()) {
-                cancel(true);
-                return true;
-            }
-            return false;
-        }
-
-        @Override
-        public boolean cancel(boolean mayInterruptIfRunning) {
-            boolean cancelled = super.cancel(mayInterruptIfRunning);
-            cancelWork();
-            return cancelled;
-        }
-
-        private void cancelWork() {
-            Future<?> active = pending.getAndSet(null);
-            if (active != null) {
-                active.cancel(true);
-            }
-            ScheduledFuture<?> timer = scheduled.getAndSet(null);
-            if (timer != null) {
-                timer.cancel(false);
-            }
-            ScheduledFuture<?> deadlineTimer = deadline.getAndSet(null);
-            if (deadlineTimer != null) {
-                deadlineTimer.cancel(false);
-            }
-        }
-    }
-
-    private final class InWorldPoller {
-        private final CancellableOperation<InWorldWaitResult> operation;
-        private final ToolCancellation cancellation;
-        private final long started;
-        private final Duration timeout;
-        private final boolean requireAbsenceFirst;
-        private final InWorldWaitProgress progress = new InWorldWaitProgress();
-
-        private InWorldPoller(CancellableOperation<InWorldWaitResult> operation, ToolCancellation cancellation, long started, Duration timeout, boolean requireAbsenceFirst) {
-            this.operation = operation;
-            this.cancellation = cancellation;
-            this.started = started;
-            this.timeout = timeout;
-            this.requireAbsenceFirst = requireAbsenceFirst;
-        }
-
-        private void tick() {
-            if (operation.stopIfCancelled(cancellation)) {
-                return;
-            }
-            CompletionStage<BridgeResponse> snapshot = session.send(SNAPSHOT, RuntimeToolSupport.EMPTY_PAYLOAD, null);
-            operation.pending(snapshot);
-            snapshot.handle((response, failure) -> failure == null && response.success() ? response.result() : null).whenComplete((snapshotResult, _) -> onSnapshot(snapshotResult));
-        }
-
-        private void onSnapshot(Object snapshotResult) {
-            if (operation.isDone()) {
-                return;
-            }
-            InWorldPollResult snapshotState = stepInWorldWait(progress, requireAbsenceFirst, snapshotResult, null);
-            if (snapshotState instanceof InWorldPollResult.Joined) {
-                operation.complete(new InWorldWaitResult(InWorldWaitResult.State.JOINED, null, elapsedSeconds(started, ticker.readNanos())));
-                return;
-            }
-            CompletionStage<BridgeResponse> screen = session.send(SCREEN_INSPECT, RuntimeToolSupport.EMPTY_PAYLOAD, null);
-            operation.pending(screen);
-            screen.handle((response, failure) -> failure == null && response.success() ? response.result() : null).whenComplete((screenResult, _) -> onScreen(snapshotResult, screenResult));
-        }
-
-        private void onScreen(Object snapshotResult, Object screenResult) {
-            if (operation.isDone()) {
-                return;
-            }
-            InWorldPollResult state = stepInWorldWait(progress, requireAbsenceFirst, snapshotResult, screenResult);
-            long now = ticker.readNanos();
-            if (state instanceof InWorldPollResult.Failed(String reason)) {
-                operation.complete(new InWorldWaitResult(InWorldWaitResult.State.FAILED, reason, elapsedSeconds(started, now)));
-            }
-            else if (elapsedNanos(started, now) >= saturatedNanos(timeout)) {
-                operation.complete(new InWorldWaitResult(InWorldWaitResult.State.TIMEOUT, null, elapsedSeconds(started, now)));
-            }
-            else {
-                operation.schedule(this::tick, POLL_INTERVAL, scheduler);
-            }
-        }
-    }
-
-    private final class BridgeWaiter {
-        private final CancellableOperation<FoundBridge> operation;
-        private final ToolCancellation cancellation;
-        private final ExpectedInstance expected;
-        private final List<String> notes;
-        private final long started;
-        private final Duration timeout;
-        private final Map<Integer, String> mismatches = new LinkedHashMap<>();
-        private List<Integer> ports;
-        private int index;
-
-        private BridgeWaiter(CancellableOperation<FoundBridge> operation, ToolCancellation cancellation, ExpectedInstance expected, List<String> notes, long started, Duration timeout) {
-            this.operation = operation;
-            this.cancellation = cancellation;
-            this.expected = expected;
-            this.notes = notes;
-            this.started = started;
-            this.timeout = timeout;
-        }
-
-        private synchronized void sweep() {
-            if (operation.stopIfCancelled(cancellation)) {
-                return;
-            }
-            if (elapsedNanos(started, ticker.readNanos()) >= saturatedNanos(timeout)) {
-                operation.completeExceptionally(new IllegalStateException(timeoutMessage()));
-                return;
-            }
-            ports = bridgePortRange();
-            index = 0;
-            probeNext();
-        }
-
-        private synchronized void timeout() {
-            operation.completeExceptionally(new IllegalStateException(timeoutMessage()));
-        }
-
-        private synchronized void probeNext() {
-            if (operation.stopIfCancelled(cancellation)) {
-                return;
-            }
-            if (index >= ports.size()) {
-                operation.schedule(this::sweep, POLL_INTERVAL, scheduler);
-                return;
-            }
-            int port = ports.get(index++);
-            CompletionStage<SessionInfo> probe = session.probe(port);
-            operation.pending(probe);
-            probe.whenComplete((info, failure) -> onProbe(port, info, failure));
-        }
-
-        private synchronized void onProbe(int port, SessionInfo info, Throwable failure) {
-            if (operation.isDone()) {
-                return;
-            }
-            if (failure == null && instanceMatches(info, expected)) {
-                operation.complete(new FoundBridge(port, info));
-                return;
-            }
-            if (failure == null) {
-                String description = info.version().value() + " (" + info.gameDir().map(Path::toString).orElse("unknown gameDir") + ")";
-                if (!description.equals(mismatches.put(port, description))) {
-                    notes.add("port " + port + " answered with a different instance: " + description + " — skipping");
-                }
-            }
-            probeNext();
-        }
-
-        private String timeoutMessage() {
-            String expectedDescription = expected.gameDirectory().map(Path::toString).orElseGet(() -> expected.version().map(MinecraftVersion::value).orElse("any instance"));
-            String seen = mismatches.isEmpty() ? "" : " Other instances answered: " + String.join(", ", mismatches.entrySet().stream().map(entry -> "port " + entry.getKey() + " → " + entry.getValue()).toList()) + ".";
-            double timeoutSeconds = timeout.getSeconds() + timeout.getNano() / 1_000_000_000.0;
-            return "Timed out after " + Math.round(timeoutSeconds) + "s waiting for the bridge of " + expectedDescription + " on ports " + BRIDGE_PORT_START + "-" + BRIDGE_PORT_END + "." + seen + " If you just launched the client, check the launcher window: it may be sitting on a login prompt (the user must log in once in the launcher GUI), or the game may have crashed — read <gameDir>/logs/latest.log.";
-        }
-    }
 }
